are evolving -> evolve
Co-authored-by: Jon Atack <jon@atack.com>

--- a/data/blog/2024-year-in-review.mdx
+++ b/data/blog/2024-year-in-review.mdx
@@ -496,7 +496,7 @@ bullish would be an understatement; we are exhilarated to see it all come
 together.
 
 Nevertheless, much remains to be done. Bitcoin, Lightning, and nostr are far from
-perfect, and as these and other protocols are evolving, we will do our best to
+perfect, and as these and other protocols evolve, we will do our best to
 support the projects and builders who are moving the needle. More than that: not
 only do we want to support innovation and improvements, but we first and
 foremost want to make sure that those who are maintaining, reviewing, and
