Apply edit from review (to our)
Co-authored-by: Jon Atack <jon@atack.com>

--- a/data/blog/2024-year-in-review.mdx
+++ b/data/blog/2024-year-in-review.mdx
@@ -173,7 +173,7 @@ freedom tech, don’t hesitate to [apply for funding](/apply).
 
 Our support for these open-source developers and initiatives is only possible
 because of donors like you. We want to express our deep gratitude to everyone
-who donated to [our funds](/funds) as well as our [operations
+who donated to [our funds](/funds) as well as to our [operations
 budget](/funds/ops). If you like what we do and want to support our work, please
 consider [making a donation](/donate). Thank you.
 
