core -> Bitcoin Core
Co-authored-by: Jon Atack <jon@atack.com>

--- a/data/blog/2024-year-in-review.mdx
+++ b/data/blog/2024-year-in-review.mdx
@@ -166,7 +166,7 @@ that which should go without saying: we are here to support free and open-source
 projects that help bitcoin flourish, especially those that don't have a clear
 path towards direct monetization. Protocol development is an area that will be
 reliant on grants for the foreseeable future, which is why we will continue to
-[support core developers](/tags/core)—whether it’s seasoned veterans or
+[support Bitcoin Core developers](/tags/core)—whether it’s seasoned veterans or
 [up-and-coming contributors](/blog/caring-for-bitcoin-core), as announced in August. If
 you are a developer who wants to quit your soul-sucking fiat job to work on
 freedom tech, don’t hesitate to [apply for funding](/apply).
