--- a/data/blog/2024-year-in-review.mdx
+++ b/data/blog/2024-year-in-review.mdx
@@ -252,7 +252,7 @@ respectively.
 
 As mentioned in [last year’s report](/blog/2023-year-in-review), we suspect that
 the distinction between “bitcoin” and “nostr” will blur over time, as
-nostr matures and gets integrated into a variety of bitcoin software across the
+nostr matures and is integrated into a variety of bitcoin software across the
 stack. This coalescing is already happening, especially on the eCash front. Are [Cashu
 addresses](/blog/nostr-grants-july-2024#npubcash) a Lightning thing, a bitcoin
 thing, or a nostr thing? Are wallets that use nostr for social payments nostr
