--- a/data/blog/2024-year-in-review.mdx
+++ b/data/blog/2024-year-in-review.mdx
@@ -235,7 +235,7 @@ our General Fund.
 ## Allocation
 
 The purpose of our two funds is to support free and open-source projects that
-are aligned with [our mission](/mission). The [Nostr Fund](/funds/nostr) is
+are aligned with [our mission](/mission). [The Nostr Fund](/funds/nostr) is
 dedicated towards nostr projects, a protocol that is just coming out of its
 infancy. The [General Fund](/funds/general) is dedicated towards all other free
 and open-source projects and contributors, especially bitcoin-related projects
