--- a/data/blog/2024-year-in-review.mdx
+++ b/data/blog/2024-year-in-review.mdx
@@ -532,7 +532,7 @@ developers across all kinds of jurisdictions. If you are thinking about creating
 such an organization don’t hesitate to [reach out to us](/contact).
 
 Last but not least, we want to dedicate this final paragraph to all of you.
-Whether you are a donor, grantee, future applicant, or simply an interested
+Whether you are a donor, grantee, future applicant, or simply an inquisitive
 reader who is interested in bitcoin and freedom tech—the revolution that is
 currently happening is only happening because of you. We are incredibly thankful
 for your time, care, and attention. You could be spending it on anything else,
