--- a/data/blog/2024-year-in-review.mdx
+++ b/data/blog/2024-year-in-review.mdx
@@ -538,7 +538,7 @@ currently happening is only happening because of you. We are incredibly thankful
 for your time, care, and attention. You could be spending it on anything else,
 but you choose to spend it on bitcoin and freedom tech. Thank you. We are beyond
 grateful for the support we received, both monetarily as well as in the form of
-community and [volunteer efforts](/about#volunteers), and it's exhillerating to
+community and [volunteer efforts](/about#volunteers), and it's exhilarating to
 see the technical progress across [projects we support](/projects/showcase). You
 are what makes all of this work, and we couldn't be doing it without you.
 
