Steve Jobs once said ...

--- a/data/blog/2024-year-in-review.mdx
+++ b/data/blog/2024-year-in-review.mdx
@@ -23,8 +23,8 @@ statistics and provide an outlook of what the next year might bring.
 
 Before we dive into the various graphs and numbers, let us spend a minute to
 remind everyone—and most importantly ourselves—_why_ we are doing what we are
-doing.  _"I'm convinced that to give away a dollar effectively is harder than to
-make a dollar,"_ Steve Jobs once mentioned in an interview. And indeed, making
+doing.  Steve Jobs once said, _"I'm convinced that to give away a dollar effectively is harder than to
+make a dollar."_ And indeed, making
 sure that grants are given to the right projects at the right time—in other
 words: making sure that [grant selection](/selection) is done fairly and
 properly—is an incredibly hard problem.
