--- a/data/blog/2024-year-in-review.mdx
+++ b/data/blog/2024-year-in-review.mdx
@@ -159,7 +159,7 @@ and securely and that privacy and free speech must be defended online through
 free software and open networks.
 
 Bitcoin is one of the most powerful open networks to date, and we believe that
-this will remain to be the case for decades to come. By [renewing our commitment
+this will continue to be the case for decades to come. By [renewing our commitment
 to bitcoin](/blog/renewing-our-commitment-to-bitcoin), we want to make explicit
 that which should go without saying: we are here to support free and open-source
 projects that help bitcoin flourish, especially those that don't have a clear
