--- a/data/blog/2024-year-in-review.mdx
+++ b/data/blog/2024-year-in-review.mdx
@@ -260,7 +260,7 @@ publish their order books? Various concepts and
 technologies are currently merging, and we expect this cross-pollination of
 ideas to continue.
 
-With all that said, nostr is still an incredibly young network, which is why we will continue to fund experimental
+With all that said, nostr is still a young network, which is why we will continue to fund experimental
 and exploratory projects from our nostr fund. Before we dive into the nostr fund
 in more detail, let’s have a look at our General Fund and what projects we
 funded in 2024.
