--- a/data/blog/2024-year-in-review.mdx
+++ b/data/blog/2024-year-in-review.mdx
@@ -533,7 +533,7 @@ such an organization don’t hesitate to [reach out to us](/contact).
 Last but not least, we want to dedicate this final paragraph to all of you.
 Whether you are a donor, grantee, future applicant, or simply an inquisitive
 reader who is interested in bitcoin and freedom tech—the revolution that is
-currently happening is only happening because of you. We are incredibly thankful
+currently happening is only happening because of you. We are immensely thankful
 for your time, care, and attention. You could be spending it on anything else,
 but you choose to spend it on bitcoin and freedom tech. Thank you. We are beyond
 grateful for the support we received, both monetarily as well as in the form of
