--- a/data/blog/2024-year-in-review.mdx
+++ b/data/blog/2024-year-in-review.mdx
@@ -55,7 +55,7 @@ always be prone to false positives (funding projects that aren't as fruitful as
 we thought they would be) as well as false negatives (not funding projects that
 should receive funding). We strive to gradually and continually improve our
 processes, and we hope to get better at what we are doing with every passing
-year. That said, we are incredibly pleased to see that our structure and
+year. That said, we are pleased to see that our structure and
 processes are working, and we believe this year in review is a testament to
 that.
 
