Apply edit from review

--- a/data/blog/2024-year-in-review.mdx
+++ b/data/blog/2024-year-in-review.mdx
@@ -95,9 +95,9 @@ long-term support from our General Fund to 18, adding to the 9 announced in 2023
 
 ![](/static/images/blog/2024-eoy/lts-grantees.png)
 
-Speaking of long-term support, in March we announced the expansion of our LTS
+In March we announced the expansion of our LTS
 program to provide [long-term support for nostr
-developers](/blog/nostr-lts-long-term-support-for-nostr-developers) also, which
+developers](/blog/nostr-lts-long-term-support-for-nostr-developers), which
 we promptly awarded to [PabloF7z](/blog/pablofz7-receives-lts-grant), [Stuart
 Bowman](/blog/stuart-bowman-receives-lts-grant), and
 [hzrd149](/blog/hzrd149-receives-lts-grant) in April, [William
