Less repetitive LTS section (Bitcoin Core)

--- a/data/blog/2024-year-in-review.mdx
+++ b/data/blog/2024-year-in-review.mdx
@@ -275,19 +275,13 @@ are Bitcoin Core, Lightning, eCash, Education, and Privacy.
 ![](/static/images/blog/2024-eoy/bitcoin-distribution.png)
 
 Our support for Bitcoin Core is mostly constituted of long-term support grants
-for core devs, namely:
-[Marco](/blog/announcing-lts-grant-program-to-support-bitcoin-core-contributors),
-[Josi](/blog/josi-baker-receives-opensats-lts-grant),
-[Sjors](/blog/sjors-provoost-receives-opensats-lts-grant),
-[Vasil](/blog/vasil-dimov-receives-lts-grant),
-[Gleb](/blog/gleb-naumenko-receives-lts-grant),
-[Furszy](/blog/furszy-receives-lts-grant-for-bitcoin-core),
-[Will](/blog/will-clark-receives-lts-grant-for-bitcoin-core),
+for maintainers and developers.
+As mentioned in the announcements section above,
 [0xB10C](/blog/0xB10C-receives-lts-grant),
 [Bruno](/blog/bruno-garcia-receives-lts-grant), and
-[Jon](/blog/jon-atack-receives-lts-grant). The last three were added to our LTS
-roster in 2024. As mentioned before, we also gave grants
-to developers who [test and review](/blog/caring-for-bitcoin-core) Bitcoin Core.
+[Jon](/blog/jon-atack-receives-lts-grant) mark this year's addition to our LTS
+roster. We also gave grants
+to contributors who [test and review](/blog/caring-for-bitcoin-core) Bitcoin Core.
 
 On the Lightning side, we are proud to support efforts regarding
 [Splicing](/blog/dusty-daemon-receives-lts-grant),
