--- a/data/blog/2024-year-in-review.mdx
+++ b/data/blog/2024-year-in-review.mdx
@@ -346,7 +346,6 @@ that enhance privacy across all layers of the stack.
 
 The remaining grants from the General Fund were given to
 [Clams](https://github.com/clams-tech),
-[Krux](https://github.com/selfcustody/krux),
 [Vexl](https://github.com/vexl-it/vexl),
 [satsigner](https://github.com/satsigner/satsigner),
 [Bitaxe](https://github.com/skot/bitaxe),
@@ -354,20 +353,19 @@ The remaining grants from the General Fund were given to
 [Utreexo](https://github.com/utreexo/utreexo),
 [Fedimint](https://github.com/fedimint/fedimint),
 [macadamia](https://github.com/zeugmaster/macadamia),
-[Krux-Installer](https://github.com/selfcustody/krux-installer),
 [Krux](https://github.com/selfcustody/krux),
+[Krux-Installer](https://github.com/selfcustody/krux-installer),
 [Cove](https://github.com/bitcoinppl/cove),
 [secp256k1.swift](https://github.com/21-DOT-DEV/swift-secp256k1),
 [BDK](https://github.com/bitcoindevkit),
 [Labelbase](https://github.com/Labelbase/Labelbase/),
-[Krux](https://github.com/selfcustody/krux),
 [dlcdevkit](https://github.com/bennyhodl/dlcdevkit),
-[Cove](https://github.com/bitcoinppl/cove),
 [StratumV2](https://github.com/stratum-mining/benchmarking-tool),
 [Floresta](https://github.com/vinteumorg/floresta),
-[Vexl](https://github.com/vexl-it/vexl), [LNbits](https://github.com/lnbits),
-[El Tor](https://bitbucket.org/eltordev/eltor), [BTCPay
-Server](https://github.com/btcpayserver), and
+[Vexl](https://github.com/vexl-it/vexl),
+[LNbits](https://github.com/lnbits),
+[El Tor](https://bitbucket.org/eltordev/eltor),
+[BTCPay Server](https://github.com/btcpayserver), and
 [Raspiblitz](https://github.com/raspiblitz/raspiblitz).
 
 You can read more about these projects in the respective announcements published
