--- a/data/blog/2024-year-in-review.mdx
+++ b/data/blog/2024-year-in-review.mdx
@@ -345,28 +345,27 @@ Project](/projects/tor), we are proud to have given grants to various projects
 that enhance privacy across all layers of the stack.
 
 The remaining grants from the General Fund were given to
-[Clams](https://github.com/clams-tech),
-[Vexl](https://github.com/vexl-it/vexl),
-[satsigner](https://github.com/satsigner/satsigner),
+[BDK](https://github.com/bitcoindevkit),
 [Bitaxe](https://github.com/skot/bitaxe),
 [Braidpool](https://github.com/pool2win/braidpool/),
-[Utreexo](https://github.com/utreexo/utreexo),
+[BTCPay Server](https://github.com/btcpayserver),
+[Clams](https://github.com/clams-tech),
+[Cove](https://github.com/bitcoinppl/cove),
+[dlcdevkit](https://github.com/bennyhodl/dlcdevkit),
+[El Tor](https://bitbucket.org/eltordev/eltor),
 [Fedimint](https://github.com/fedimint/fedimint),
-[macadamia](https://github.com/zeugmaster/macadamia),
+[Floresta](https://github.com/vinteumorg/floresta),
 [Krux](https://github.com/selfcustody/krux),
 [Krux-Installer](https://github.com/selfcustody/krux-installer),
-[Cove](https://github.com/bitcoinppl/cove),
-[secp256k1.swift](https://github.com/21-DOT-DEV/swift-secp256k1),
-[BDK](https://github.com/bitcoindevkit),
 [Labelbase](https://github.com/Labelbase/Labelbase/),
-[dlcdevkit](https://github.com/bennyhodl/dlcdevkit),
-[StratumV2](https://github.com/stratum-mining/benchmarking-tool),
-[Floresta](https://github.com/vinteumorg/floresta),
-[Vexl](https://github.com/vexl-it/vexl),
 [LNbits](https://github.com/lnbits),
-[El Tor](https://bitbucket.org/eltordev/eltor),
-[BTCPay Server](https://github.com/btcpayserver), and
+[macadamia](https://github.com/zeugmaster/macadamia),
 [Raspiblitz](https://github.com/raspiblitz/raspiblitz).
+[satsigner](https://github.com/satsigner/satsigner),
+[secp256k1.swift](https://github.com/21-DOT-DEV/swift-secp256k1),
+[StratumV2](https://github.com/stratum-mining/benchmarking-tool),
+[Utreexo](https://github.com/utreexo/utreexo), and
+[Vexl](https://github.com/vexl-it/vexl).
 
 You can read more about these projects in the respective announcements published
 in [February](/blog/bitcoin-grants-feb-2024),
