Alphabetic order for nostr grants

--- a/data/blog/2024-year-in-review.mdx
+++ b/data/blog/2024-year-in-review.mdx
@@ -410,36 +410,37 @@ LTS grantees: [Pablo](/blog/pablofz7-receives-lts-grant),
 [Greenart](/blog/greenart7c3-receives-lts-grant).
 
 In addition to these LTS grants we gave grants to the following nostr projects
-this year: [Zapstore](https://github.com/zapstore/zapstore),
-[Camelus](https://github.com/leo-lox/camelus),
-[Mostro](https://github.com/MostroP2P/mostro),
-[nostter](https://github.com/SnowCait/nostter),
-[nostr-php](https://github.com/nostrver-se/nostr-php),
-[Shopstr](https://github.com/shopstr-eng/shopstr),
-[Nostrmo](https://github.com/haorendashu/nostrmo), [Captain's
-Log](https://github.com/nodetec/comet),
-[Osty](https://github.com/ostyjs/create-osty/),
-[Voyage](https://github.com/dluvian/voyage),
-[alphaama](https://github.com/eskema/alphaama), [dart_ndk +
-yana](https://github.com/relaystr/ndk),
-[nostr.build](https://github.com/nostrbuild/nostr.build),
-[nostroots](https://github.com/Trustroots/nostroots),
-[jesterui](https://github.com/jesterui/jesterui),
-[nostr-spring-boot-starter](https://github.com/theborakompanioni/nostr-spring-boot-starter),
-[Seer](https://github.com/Galaxoid-Labs/Seer),
-[nostr-sdk-ios](https://github.com/nostr-sdk/nostr-sdk-ios),
-[ngit](https://github.com/DanConwayDev/ngit-cli),
-[Whitenoise](https://github.com/erskingardner/whitenoise),
-[futr](https://github.com/futrnostr/futr),
-[Notedeck](https://github.com/damus-io/notedeck),
+this year:
 [0xchat](https://github.com/0xchat-app),
-[nostr-relay-tray](https://github.com/CodyTseng/nostr-relay-tray),
+[alphaama](https://github.com/eskema/alphaama),
+[Camelus](https://github.com/leo-lox/camelus),
+[Captain's Log](https://github.com/nodetec/comet),
+[dart_ndk + yana](https://github.com/relaystr/ndk),
+[DVMDash](https://github.com/dtdannen/dvmdash),
 [Formstr](https://github.com/abhay-raizada/nostr-forms),
+[futr](https://github.com/futrnostr/futr),
 [Groups](https://github.com/max21dev/groups),
+[jesterui](https://github.com/jesterui/jesterui),
+[Mostro](https://github.com/MostroP2P/mostro),
+[ngit](https://github.com/DanConwayDev/ngit-cli),
+[nostr-php](https://github.com/nostrver-se/nostr-php),
+[nostr-relay-tray](https://github.com/CodyTseng/nostr-relay-tray),
+[nostr-sdk-ios](https://github.com/nostr-sdk/nostr-sdk-ios),
+[nostr-spring-boot-starter](https://github.com/theborakompanioni/nostr-spring-boot-starter),
+[nostr.build](https://github.com/nostrbuild/nostr.build),
 [nostrability](https://github.com/nostrability),
+[Nostrmo](https://github.com/haorendashu/nostrmo),
 [Nostrocket](https://github.com/nostrocket),
-[DVMDash](https://github.com/dtdannen/dvmdash), and
-[Safebox](https://github.com/trbouma/safebox).
+[nostroots](https://github.com/Trustroots/nostroots),
+[nostter](https://github.com/SnowCait/nostter),
+[Notedeck](https://github.com/damus-io/notedeck),
+[Osty](https://github.com/ostyjs/create-osty/),
+[Safebox](https://github.com/trbouma/safebox)
+[Seer](https://github.com/Galaxoid-Labs/Seer),
+[Shopstr](https://github.com/shopstr-eng/shopstr),
+[Voyage](https://github.com/dluvian/voyage),
+[Whitenoise](https://github.com/erskingardner/whitenoise), and
+[Zapstore](https://github.com/zapstore/zapstore).
 
 <center>
     <DonateToNostrFundButton/>
