Add missing comma
Co-authored-by: Bayer <55212954+Bayernatoor@users.noreply.github.com>

--- a/data/blog/2024-year-in-review.mdx
+++ b/data/blog/2024-year-in-review.mdx
@@ -435,7 +435,7 @@ this year:
 [nostter](https://github.com/SnowCait/nostter),
 [Notedeck](https://github.com/damus-io/notedeck),
 [Osty](https://github.com/ostyjs/create-osty/),
-[Safebox](https://github.com/trbouma/safebox)
+[Safebox](https://github.com/trbouma/safebox),
 [Seer](https://github.com/Galaxoid-Labs/Seer),
 [Shopstr](https://github.com/shopstr-eng/shopstr),
 [Voyage](https://github.com/dluvian/voyage),
