--- a/data/blog/2024-year-in-review.mdx
+++ b/data/blog/2024-year-in-review.mdx
@@ -514,7 +514,7 @@ will share some thoughts on this matter at the beginning of the new year. In the
 best case, we want to see many more organizations like OpenSats, as we believe
 that specialization and a broader support network are paramount as the various
 ecosystems grow and specialize. We don’t have a crystal ball, but from
-our perspective, it isn’t hard to imagine that nostr and ecash are here to stay
+our perspective, it isn’t hard to imagine that nostr and eCash are here to stay
 and are bound to grow, and it isn’t outlandish to think that open-source
 hardware will gain in importance as well. Bitcoin will continue to be of the
 utmost importance, and as it enters the political arena of the world
