DVMs -> Data Vending Machines

--- a/data/blog/2024-year-in-review.mdx
+++ b/data/blog/2024-year-in-review.mdx
@@ -383,7 +383,9 @@ client projects, as was the case last year. However, we definitely saw “other
 stuff” on the rise this year, with nostr-based app stores, P2P trading systems,
 chat clients, and even website frameworks gaining traction. Media hosting and
 the integration of eCash are trends that we keep a close eye on too, and it’s
-fantastic to see that custom feeds via DVMs—something that was pure
+fantastic to see that custom feeds via Data Vending Machines
+([DVMs](/blog/nostr-grants-december-2023#nip-90-data-vending-machine-framework))—something
+that was pure
 experimentation last year—are now integrated and ready for prime-time in
 multiple clients. This shift to “other stuff” is apparent in our 2024 allocation
 statistics as well:
