Add email to send report to
Clarify that reports must be sent to support@opensats.org

--- a/data/pages/faq-grantees.mdx
+++ b/data/pages/faq-grantees.mdx
@@ -92,7 +92,7 @@ That’s basically it![^fn-legal]
 ### How does OpenSats evaluate the work done by a grantee?
 
 Every grantee must submit a progress report every 90 days. A markdown template
-is provided when we request your first report.
+is provided when we request your first report. The report in markdown format must be sent to support@opensats.org.
 
 If your grant started in March, for example, the 1st report will be due anytime
 during the month of June and should cover the work done from March through May,
