--- a/data/blog/more-for-core.mdx
+++ b/data/blog/more-for-core.mdx
@@ -1,5 +1,5 @@
 ---
-title: "More For Core"
+title: "Additional Grants for Bitcoin Core Contributors"
 date: '2025-01-18'
 tags: ['OpenSats', 'grants', 'bitcoin', 'core', 'wave']
 draft: false
