--- a/data/blog/more-for-core.mdx
+++ b/data/blog/more-for-core.mdx
@@ -3,7 +3,7 @@ title: "Additional Grants for Bitcoin Core Contributors"
 date: '2025-01-18'
 tags: ['OpenSats', 'grants', 'bitcoin', 'core', 'wave']
 draft: false
-authors: ['jamesob', 'dergigi', 'arvin']
+authors: ['jamesob', 'arvin']
 images: ['/static/images/blog/67-more-for-core.jpg']
 summary: "OpenSats announces a new round of grants focused on Bitcoin Core development."
 ---
