Link to Summer of Bitcoin website directly

--- a/data/blog/more-for-core.mdx
+++ b/data/blog/more-for-core.mdx
@@ -125,7 +125,7 @@ issue](https://github.com/bitcoin/bitcoin/issues?q=sort%3Aupdated-desc+is%3Aopen
 list, the "[Contributing to Bitcoin
 Core](https://github.com/bitcoin/bitcoin/blob/master/CONTRIBUTING.md)" readme,
 or the [PR Review Club](https://bitcoincore.reviews/). You can also apply to
-programs like [Summer of Bitcoin](/projects/summerofbitcoin) or
+programs like [Summer of Bitcoin](https://www.summerofbitcoin.org/) or
 [Chaincode](https://learning.chaincode.com/) for hands-on experience.
 
 We are immensely grateful to our donors who make these grants possible and
