Edit correct grantee handle
From "i" to "L" per https://github.com/OpenSats/website/pull/387#discussion_r1922621089

--- a/data/blog/more-for-core.mdx
+++ b/data/blog/more-for-core.mdx
@@ -51,7 +51,7 @@ such as replacing the unmaintained
 [LevelDB](https://github.com/bitcoin/bitcoin/blob/master/src/leveldb/README.md)
 database.
 
-This grant will power I0rinc's continued contributions to Bitcoin Core,
+This grant will power L0rinc's continued contributions to Bitcoin Core,
 including performance optimizations that reduce IBD times and improve memory
 usage. With a proven track record of impactful commits and collaboration, his
 work will ensure Bitcoin Core remains robust, efficient, and sustainable for
