Add missing forward slash

--- a/data/blog/ninth-wave-of-bitcoin-grants.mdx
+++ b/data/blog/ninth-wave-of-bitcoin-grants.mdx
@@ -119,7 +119,7 @@ License: CC0-1.0
 
 ---
 
-With this ninth wave of grants, as with [previous waves](tags/wave), we evaluated
+With this ninth wave of grants, as with [previous waves](/tags/wave), we evaluated
 applications based on carefully [defined criteria](/apply#criteria) and put
 forth our best efforts to select the most impactful and promising proposals for
 the Bitcoin ecosystem. If you are a developer working on a project aligned with
