Edit for clarity
Co-authored-by: Gigi <109058+dergigi@users.noreply.github.com>

--- a/data/blog/ninth-wave-of-bitcoin-grants.mdx
+++ b/data/blog/ninth-wave-of-bitcoin-grants.mdx
@@ -47,7 +47,7 @@ self-hostable. It complements tools like [mempool.space](https://mempool.space/)
 by offering a global/macro view of network dynamics rather than a
 micro/address-level view. Kibo provides a real-time API with thousands of routes
 and a robust application interface, promoting transparency and trust in the
-Bitcoin network for researchers, traders, and enthusiasts.
+Bitcoin network for researchers, developers, and enthusiasts.
 
 Kibo aims to continue refining its application by improving performance,
 enhancing user experience, and adding new datasets and charts. Planned features
