Add wording for clarity
Co-authored-by: Gigi <109058+dergigi@users.noreply.github.com>

--- a/data/blog/ninth-wave-of-bitcoin-grants.mdx
+++ b/data/blog/ninth-wave-of-bitcoin-grants.mdx
@@ -71,7 +71,7 @@ services like ecash mints, nostr relays, and Bitcoin node communication.
 El Tor plans to expand the network's scale and capabilities by onboarding more
 relays globally, and leveraging financial incentives to drive adoption. This
 effort will support greater bandwidth, reliability, and anonymity for users, and
-provide a sustainable model for future development. The project will continue
+aims to provide a sustainable model for future development. The project will continue
 refining its codebase and exploring integrations that bring the vision of
 private, decentralized communication closer to reality.
 
