Uniform license display

--- a/data/blog/ninth-wave-of-bitcoin-grants.mdx
+++ b/data/blog/ninth-wave-of-bitcoin-grants.mdx
@@ -76,8 +76,7 @@ refining its codebase and exploring integrations that bring the vision of
 private, decentralized communication closer to reality.
 
 Repository: [eltordev/eltor](https://bitbucket.org/eltordev/eltor)  
-License: [3-Clause BSD](https://opensource.org/license/BSD-3-Clause) (inherited from
-[Tor](https://gitlab.torproject.org/tpo/core/tor/-/blob/main/LICENSE))
+License: 3-Clause BSD
 
 ### Nutstash
 
