Link to a specific chart inside Kibo
(price is boring)

--- a/data/blog/ninth-wave-of-bitcoin-grants.mdx
+++ b/data/blog/ninth-wave-of-bitcoin-grants.mdx
@@ -41,7 +41,7 @@ and the value they bring to the Bitcoin ecosystem.
 
 ### Kibo
 
-[Kibo](https://kibo.money/) is a Bitcoin-only on-chain data generator and
+[Kibo] is a Bitcoin-only on-chain data generator and
 visualizer that is free, open-source, verifiable, local-first, and
 self-hostable. It complements tools like [mempool.space](https://mempool.space/)
 by offering a global/macro view of network dynamics rather than a
@@ -58,6 +58,8 @@ novel use cases to make the network more accessible and verifiable.
 
 Repository: [kibo-money/kibo](https://github.com/kibo-money/kibo)  
 License: MIT
+
+[Kibo]: https://kibo.money/chart-date-to-block-interval-daily-median?from=2008-07-01&to=2025-05-24&btc-price=false
 
 ### El Tor
 
