Link to upstream repo

--- a/data/blog/ninth-wave-of-bitcoin-grants.mdx
+++ b/data/blog/ninth-wave-of-bitcoin-grants.mdx
@@ -59,7 +59,7 @@ novel use cases to make the network more accessible and verifiable.
 Repository: [kibo-money/kibo](https://github.com/kibo-money/kibo)  
 License: MIT
 
-[Kibo]: https://kibo.money/chart-date-to-block-interval-daily-median?from=2008-07-01&to=2025-05-24&btc-price=false
+[Kibo]: https://kibo.money/chart-date-to-block-interval-daily-median?from=2008-07-01&to=2025-05-24&btc-price=falsec
 
 ### El Tor
 
@@ -115,7 +115,7 @@ APIs for projects like [BDK](https://github.com/bitcoindevkit#hey-there-) and
 [LDK](https://github.com/lightningdevkit/.github/blob/main/profile/README.md#hey-there-),
 empowering developers to confidently build on a collaborative, clean platform.
 
-Repository: [jamillambert/rust-bitcoin](https://github.com/jamillambert/rust-bitcoin)  
+Repository: [rust-bitcoin/rust-bitcoin](https://github.com/rust-bitcoin/rust-bitcoin)  
 License: CC0-1.0
 
 ---
