Three additional edits/adjustments
Adjustments/Edits per Jon Atack:

- Adjust square bracket for link text in Closing.
- Add link to Bolt12  under Nutstash.
- Punctuation edit under El Tor.

--- a/data/blog/ninth-wave-of-bitcoin-grants.mdx
+++ b/data/blog/ninth-wave-of-bitcoin-grants.mdx
@@ -71,7 +71,7 @@ project enhances censorship resistance and facilitates private interactions for
 services like ecash mints, nostr relays, and Bitcoin node communication.
 
 El Tor plans to expand the network's scale and capabilities by onboarding more
-relays globally, and leveraging financial incentives to drive adoption. This
+relays globally and leveraging financial incentives to drive adoption. This
 effort will support greater bandwidth, reliability, and anonymity for users, and
 aims to provide a sustainable model for future development. The project will continue
 refining its codebase and exploring integrations that bring the vision of
@@ -92,7 +92,8 @@ transactions more accessible and practical for everyday use.
 Nutstash intends to implement additional features such as offline token
 verification and Cashu payment requests, aligning with recent protocol updates.
 The project will prioritize bug fixes, integrate blinded authentication for
-community mints, and explore on-chain mint functionality using BOLT 12. These
+community mints, and explore on-chain mint functionality using [BOLT
+12](https://github.com/lightning/bolts/blob/master/12-offer-encoding.md). These
 enhancements aim to make Nutstash a comprehensive and reliable tool for ecash
 transactions in the Bitcoin ecosystem.
 
@@ -121,7 +122,7 @@ License: CC0-1.0
 ---
 
 With this ninth wave of grants, as with [previous waves](/tags/wave), we evaluated
-applications based on carefully [defined criteria](/apply#criteria) and put
+applications based on carefully defined [criteria](/apply#criteria) and put
 forth our best efforts to select the most impactful and promising proposals for
 the Bitcoin ecosystem. If you are a developer working on a project aligned with
 [our mission](/mission), we encourage you to [apply for funding](/apply).
