Fix email address syntax error

--- a/data/pages/faq-applicant.mdx
+++ b/data/pages/faq-applicant.mdx
@@ -8,7 +8,7 @@ layout: PageLayout
 At OpenSats, we allocate funds from our generous donors to developers and
 educators working on free and open-source projects in the Bitcoin and Nostr
 ecosystems. The OpenSats [operations team](/about#operations) is available to
-address any concerns or questions. Please email us at <support@opensats.org>
+address any concerns or questions. Please email us at [support@opensats.org](mailto:support@opensats.org)
 with inquiries.
 
 - [What kind of projects is OpenSats interested in
@@ -145,11 +145,11 @@ commitment with corresponding levels of financial support.
 
 Yes. We suggest improving your application or putting in more Proof of Work
 before applying again. If you have questions about why your application was
-rejected, contact us at <support@opensats.org>.
+rejected, contact us at [support@opensats.org](mailto:support@opensats.org).
 
 ### Can anyone apply?
 
-We cannot fund grants related to countries or programs on the[OFAC Sanctions
+We cannot fund grants related to countries or programs on the [OFAC Sanctions
 Program and Country
 Information](https://ofac.treasury.gov/sanctions-programs-and-country-information)
 list.
@@ -161,12 +161,12 @@ and tag us on
 [nostr](https://njump.me/npub10pensatlcfwktnvjjw2dtem38n6rvw8g6fv73h84cuacxn4c28eqyfn34f).
 
 If you have something that irks you and/or suggestions for improvements, please
-let us know via <support@opensats.org>. We are learning as we go, so any
+let us know via [support@opensats.org](mailto:support@opensats.org). We are learning as we go, so any
 feedback is highly appreciated.
 
 ### I have a question that isn't covered here; whom should I email?
 
-All inquiries should be sent to <support@opensats.org>.
+All inquiries should be sent to [support@opensats.org](mailto:support@opensats.org).
 
 ---
 
