--- a/data/pages/faq-applicant.mdx
+++ b/data/pages/faq-applicant.mdx
@@ -1,5 +1,5 @@
 ---
-title: Applicat FAQ
+title: Applicant FAQ
 summary: "Frequently Asked Questions"
 image: /static/images/avatar.png
 layout: PageLayout
