Fix typo; update summary

--- a/data/pages/faq-applicant.mdx
+++ b/data/pages/faq-applicant.mdx
@@ -1,6 +1,6 @@
 ---
-title: Applicat FAQ
-summary: "Frequently Asked Questions"
+title: Application FAQ
+summary: "Frequently Asked Questions (Applications)"
 image: /static/images/avatar.png
 layout: PageLayout
 ---
