--- a/data/pages/faq-applicant.mdx
+++ b/data/pages/faq-applicant.mdx
@@ -11,38 +11,25 @@ ecosystems. The OpenSats [operations team](/about#operations) is available to
 address any concerns or questions. Please email us at [support@opensats.org](mailto:support@opensats.org)
 with inquiries.
 
-- [What kind of projects is OpenSats interested in
-  funding?](#what-kind-of-projects-is-opensats-interested-in-funding)
+- [What kind of projects is OpenSats interested in funding?](#what-kind-of-projects-is-opensats-interested-in-funding)
 - [What projects do we NOT fund?](#what-projects-do-we-not-fund)
 - [When can I apply for a grant?](#when-can-i-apply-for-a-grant)
 - [How long will it take to evaluate my application?](#how-long-will-it-take-to-evaluate-my-application)
 - [How will I know if my application was selected or not?](#how-will-i-know-if-my-application-was-selected-or-not)
-- [In which currency should I denominate my grant
-  application?](#in-which-currency-should-i-denominate-my-grant-application)
-- [How should I determine the budget for my
-  application?](#how-should-i-determine-the-budget-for-my-application)
-- [Can I receive [insert fiat currency]?](#can-i-receive-insert-fiat-currency)
-- [Can OpenSats help me with an accounting or legal
-  question?](#can-opensats-help-me-with-an-accounting-or-legal-question)
-- [Can the grant be received as a company, trust, LLC, or
-  similar?](#can-the-grant-be-received-as-a-company-trust-llc-or-similar)
-- [Why do you require tax information from your
-  grantees?](#why-do-you-require-tax-information-from-your-grantees)
-- [What are the requirements of OpenSats
-  grants?](#what-are-the-requirements-of-opensats-grants)
-- [What does it mean to produce work under a free and open-source
-  license?](#what-does-it-mean-to-produce-work-under-a-free-and-open-source-license)
-- [Can grants be part-time or only
-  full-time?](#can-grants-be-part-time-or-only-full-time)
-- [How can I increase my funding
-  chances?](#how-can-i-increase-my-funding-chances)
-- [If my application is rejected, can I
-  reapply?](#if-my-application-is-rejected-can-i-reapply)
+- [In which currency should I denominate my grant application?](#in-which-currency-should-i-denominate-my-grant-application)
+- [How should I determine the budget for my application?](#how-should-i-determine-the-budget-for-my-application)
+- [Can I receive \[insert fiat currency\]?](#can-i-receive-insert-fiat-currency)
+- [Can OpenSats help me with an accounting or legal question?](#can-opensats-help-me-with-an-accounting-or-legal-question)
+- [Can the grant be received as a company, trust, LLC, or similar?](#can-the-grant-be-received-as-a-company-trust-llc-or-similar)
+- [Why do you require tax information from your grantees?](#why-do-you-require-tax-information-from-your-grantees)
+- [What are the requirements of OpenSats grants?](#what-are-the-requirements-of-opensats-grants)
+- [What does it mean to produce work under a free and open-source license?](#what-does-it-mean-to-produce-work-under-a-free-and-open-source-license)
+- [Can grants be part-time or only full-time?](#can-grants-be-part-time-or-only-full-time)
+- [How can I increase my funding chances?](#how-can-i-increase-my-funding-chances)
+- [If my application is rejected, can I reapply?](#if-my-application-is-rejected-can-i-reapply)
 - [Can anyone apply?](#can-anyone-apply)
-- [What should I do if I have general praise or criticism regarding
-  OpenSats?](#what-should-i-do-if-i-have-general-praise-or-criticism-regarding-opensats)
-- [I have a question that isn't covered here; whom should I
-  email?](#i-have-a-question-that-isnt-covered-here-whom-should-i-email)
+- [What should I do if I have general praise or criticism regarding OpenSats?](#what-should-i-do-if-i-have-general-praise-or-criticism-regarding-opensats)
+- [I have a question that isn't covered here; whom should I email?](#i-have-a-question-that-isnt-covered-here-whom-should-i-email)
 
 ---
 
