Make footnote a footnote

--- a/data/pages/faq-application.mdx
+++ b/data/pages/faq-application.mdx
@@ -60,7 +60,7 @@ it can take longer.
 
 ### How will I know if my application was selected or not?
 
-You will be notified via email.
+You will be notified via email.[^fn-shitcoins]
 
 ### In which currency should I denominate my grant application?
 
@@ -155,8 +155,4 @@ feedback is highly appreciated.
 
 All inquiries should be sent to support@opensats.org.
 
----
-
-*if your application is spam or shitcoin related, you will not receive a
-notification as these applications do not meet our funding criteria. You can
-safely assume your application was rejected.
+[^fn-shitcoins]: If your application is spam or shitcoin related, you will not receive a notification as these applications do not meet our funding criteria. You can safely assume your application was rejected.
