Add paragraph; reword

--- a/data/pages/faq-application.mdx
+++ b/data/pages/faq-application.mdx
@@ -8,8 +8,10 @@ layout: PageLayout
 At OpenSats, we allocate funds from our generous donors to developers and
 educators working on free and open-source projects in the Bitcoin and Nostr
 ecosystems. The OpenSats [operations team](/about#operations) is available to
-address any concerns or questions. Please email us at support@opensats.org
-with inquiries.
+address any concerns or questions.
+
+Please email us at support@opensats.org in case you have additional questions
+not covered below.
 
 - [What kind of projects is OpenSats interested in funding?](#what-kind-of-projects-is-opensats-interested-in-funding)
 - [What projects do we NOT fund?](#what-projects-do-we-not-fund)
