Add link to /contact

--- a/data/pages/faq-application.mdx
+++ b/data/pages/faq-application.mdx
@@ -155,6 +155,7 @@ feedback is highly appreciated.
 
 ### I have a question that isn't covered here; whom should I email?
 
-All inquiries should be sent to support@opensats.org.
+All application-related inquiries should be sent to support@opensats.org.
+Please refer to our [contact page](/contact) for additional details.
 
 [^fn-shitcoins]: If your application is spam or shitcoin related, you will not receive a notification as these applications do not meet our funding criteria. You can safely assume your application was rejected.
