Link to grant agreement

--- a/data/pages/faq-application.mdx
+++ b/data/pages/faq-application.mdx
@@ -106,8 +106,8 @@ The general requirements are as follows:
 - Submit a progress report every 90 days for the duration of the grant.
 - That's essentially it!
 
-Footnote: If you're a lawyer, please refer to the fine print in our grant
-agreement.
+Footnote: If you're a lawyer, please refer to the fine print in our [grant
+agreement](/transparency).
 
 ### What does it mean to produce work under a free and open-source license?
 
