--- a/data/pages/faq-application.mdx
+++ b/data/pages/faq-application.mdx
@@ -76,7 +76,7 @@ your time, and taxes when applying for a grant.
 
 ### Can I receive [insert fiat currency]?
 
-No. All grants are based on USD value but paid in bitcoin. We will request
+No. All grants are denominated in USD but paid in bitcoin. We will request
 on-chain addresses as part of the grant process.
 
 ### Can OpenSats help me with an accounting or legal question?
