--- a/data/pages/faq-application.mdx
+++ b/data/pages/faq-application.mdx
@@ -66,7 +66,7 @@ You will be notified via email.[^fn-shitcoins]
 
 ### In which currency should I denominate my grant application?
 
-All grants are evaluated in USD, please propose your budget in USD.
+All grants are denominated in USD, please propose your budget in USD.
 
 ### How should I determine the budget for my application?
 
