More expressive link description

--- a/data/pages/faq-application.mdx
+++ b/data/pages/faq-application.mdx
@@ -43,7 +43,7 @@ All applications should be made with the following criteria in mind:
 - Free and Open-Source
 - Transparency & Education
 
-More information is available [here](/apply#criteria).
+Refer to our [application criteria](/apply#criteria) for more details.
 
 ### What projects do we NOT fund?
 
