Link to general FAQ from application FAQ

--- a/data/pages/faq-application.mdx
+++ b/data/pages/faq-application.mdx
@@ -153,7 +153,9 @@ If you have something that irks you and/or suggestions for improvements, please
 let us know via support@opensats.org. We are learning as we go, so any
 feedback is highly appreciated.
 
-### I have a question that isn't covered here; whom should I email?
+### I have a question that isn't covered here; what do I do?
+
+Have a look at the [General FAQ](/faq). Your question might be answered there.
 
 All application-related inquiries should be sent to support@opensats.org.
 Please refer to our [contact page](/contact) for additional details.
