Link to Application FAQ in criteria

--- a/data/pages/apply.mdx
+++ b/data/pages/apply.mdx
@@ -41,7 +41,7 @@ fullest potential. Potential areas of interest include secure messaging,
 merchant acceptance tools, layer two protocols, etc. Source code and documents
 resulting from funded projects must be made publicly available for access, edit,
 and redistribution free of charge and without restrictions. Your project MUST
-HAVE a proper open-source license & educational materials must be available to
+HAVE a proper [open-source license][license] & educational materials must be available to
 the public under an open license.
 
 **Transparency & Education:** Funded contributors and projects should be prepared to
@@ -58,3 +58,4 @@ addresses in order to receive donation payouts from OpenSats.
 [mission]: /mission
 [about]: /about
 [gsp]: /selection
+[license]: /faq/application#what-does-it-mean-to-produce-work-under-a-free-and-open-source-license
